# most-common-words-multilingual

./: README.md  pyproject.toml
data/wordfrequency.info/: af.txt  am.txt  ar.txt  az.txt  be.txt  bg.txt  bn.txt  bs.txt  ca.txt  ceb.txt  co.txt  cs.txt  cy.txt  da.txt  de.txt  el.txt  en.txt  eo.txt  es.txt  et.txt  eu.txt  fa.txt  fi.txt  fr.txt  fy.txt  ga.txt  gd.txt  gl.txt  gu.txt  ha.txt  haw.txt  hi.txt  hmn.txt  hr.txt  ht.txt  hu.txt  hy.txt  id.txt  ig.txt  is.txt  (+69 more)
scripts/: readme_table.py  wordfrequency_info.py
